test/units/ParseSpec/valid/expr/case-wildcard.algst
case x of {
  A _ -> x,
  _   -> x,
}
