test/units/ParseSpec/invalid/expr/case-double-wildcard-1.algst
case x of {
  _ -> 1,
  _ -> 2,
}
